# city-search-backend-coding-challenge

./: .gitignore  Dockerfile  backend.py  backend_lib.py  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: tofu-apply.yml  tofu-check.yml
backend/: app.py
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
test/: test_app.py  test_lib.py
