[tool.poetry]
name = "city-search-backend-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Gabriel Chamon Araujo <gabriel.chamon@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
